--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.github.nichetoolkit</groupId>
     <artifactId>rest-toolkit-parent</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-SNAPSHOT</version>
 
     <modules>
         <module>rest-toolkit-core</module>
@@ -151,7 +151,7 @@
         <nexus-staging-maven-plugin.version>1.7.0</nexus-staging-maven-plugin.version>
         <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
 
-        <rest-toolkit.version>1.1.0</rest-toolkit.version>
+        <rest-toolkit.version>1.1.1-SNAPSHOT</rest-toolkit.version>
 
         <guava.version>33.3.1-jre</guava.version>
         <bcprov.version>1.78.1</bcprov.version>
