--- a/rest-toolkit-example/src/main/resources/application.properties
+++ b/rest-toolkit-example/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=8080
 
 spring.jmx.enabled=false
-spring.application.name=rest-server
-spring.jmx.default-domain=rest-server
+spring.application.name=rest-example
+spring.jmx.default-domain=rest-example
 
 server.tomcat.connection-timeout=600s
 spring.servlet.multipart.enabled=true
@@ -99,4 +99,4 @@ nichetoolkit.rest.logback.prefix-length=12
 
 
 logging.config=classpath:logback-spring.xml
-logging.file.path=G:\\data\\server\\log
+logging.file.path=\\data\\server\\log
