fix rest-example logging path

--- a/rest-toolkit-example/src/main/resources/application.properties
+++ b/rest-toolkit-example/src/main/resources/application.properties
@@ -99,4 +99,4 @@ nichetoolkit.rest.logback.prefix-length=12
 
 
 logging.config=classpath:logback-spring.xml
-logging.file.path=\\data\\server\\log
+logging.file.path=\\data\\server\\rest-example\\log
