--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <module>rest-toolkit-core</module>
         <module>rest-toolkit-utils</module>
         <module>rest-toolkit-starter</module>
-<!--        <module>rest-toolkit-example</module>-->
+        <module>rest-toolkit-example</module>
     </modules>
 
     <name>rest-toolkit-parent</name>
@@ -321,10 +321,26 @@
                     </execution>
                 </executions>
             </plugin>
+<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <serverId>sonatype-nexus-central</serverId>
                     <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
