--- a/rest-toolkit-example/pom.xml
+++ b/rest-toolkit-example/pom.xml
@@ -180,7 +180,7 @@
                     <serverId>sonatype-nexus-central</serverId>
                     <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                    <skipRemoteStaging>true</skipRemoteStaging>
+                    <skipNexusStagingDeployMojo>true</skipNexusStagingDeployMojo>
                 </configuration>
             </plugin>
             <plugin>
